Challenge 4. Second rule.

--- a/4-DOM-Pig-Game/style.css
+++ b/4-DOM-Pig-Game/style.css
@@ -6,7 +6,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+
 }
 
 .clearfix::after {
@@ -80,7 +80,7 @@ body {
     color: #EB4D4D;
     top: -7px;
     right: 10px;
-    
+
 }
 
 .player-current-box {
@@ -103,7 +103,7 @@ body {
     font-size: 30px;
 }
 
-button {
+button, input {
     position: absolute;
     width: 200px;
     left: 50%;
@@ -137,10 +137,16 @@ i {
     transition: margin 0.3s;
 }
 
+input {
+  border: 1px solid #555;
+  border-radius: 5px;
+  text-align: center;
+}
+
 .btn-new { top: 45px;}
 .btn-roll { top: 403px;}
 .btn-hold { top: 467px;}
-
+.btn-set-score { top: 531px;}
 .dice {
     position: absolute;
     left: 50%;
