--- a/4-DOM-Pig-Game/style.css
+++ b/4-DOM-Pig-Game/style.css
@@ -150,7 +150,6 @@ input {
 .dice {
     position: absolute;
     left: 50%;
-    top: 178px;
     transform: translateX(-50%);
     height: 100px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
@@ -158,3 +157,11 @@ input {
 
 .winner { background-color: #f7f7f7; }
 .winner .player-name { font-weight: 300; color: #EB4D4D; }
+
+#dice-1 {
+   top: 120px;
+}
+
+#dice-2{
+  top: 250px;
+}
